--- a/package/tox.ini
+++ b/package/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py27,py34,py35,py36
+envlist = py27,py34,py35,py36,py37,py38
 skip_missing_interpreters=True
 
 [testenv]
@@ -9,7 +9,6 @@ deps =
 
 commands =
     pytest --cov=screwdriver_in_a_box --cov-report=xml:cobertura.xml --cov-report term-missing tests/
-    # pytest tests
 
 extras =
     test
