--- a/package/setup.cfg
+++ b/package/setup.cfg
@@ -7,7 +7,7 @@ version = 0.0.0
 
 [options]
 packages =
-    screwdriver_in_a_box
+    screwdriver_cd
 python_requires = >=2.7
 
 [options.extras_require]
@@ -16,4 +16,4 @@ test =
 
 [options.entry_points]
 console_scripts =
-    screwdriver_in_a_box=screwdriver_in_a_box:main
+    screwdriver_in_a_box=screwdriver_cd:main
