--- a/package/setup.cfg
+++ b/package/setup.cfg
@@ -1,7 +1,7 @@
 [metadata]
 author = Screwdriver.cd team
 description-file = ../README.md
-name = screwdriver_in_a_box
+name = screwdriver_cd_setup
 url = https://git.ouroath.com/dhubbard/in-a-box
 version = 0.0.0
 
