--- a/package/setup.cfg
+++ b/package/setup.cfg
@@ -7,7 +7,7 @@ version = 0.0.0
 
 [options]
 packages =
-    screwdriver_cd
+    screwdriver_cd_setup
 python_requires = >=3.6
 
 [options.extras_require]
