--- a/screwdriver.yaml
+++ b/screwdriver.yaml
@@ -6,7 +6,7 @@ jobs:
     steps:
       - begin: echo begin
       - update: apt-get -y update
-      - install_python: apt-get install -h python3 python3-dev python3-venv python3-pip
+      - install_python: apt-get install -y python3 python3-dev python3-venv python3-pip
       - install_tox: python3 -m pip install tox
       - run_tox: |
           cd package
