--- a/screwdriver.yaml
+++ b/screwdriver.yaml
@@ -2,7 +2,6 @@ jobs:
   validate_test:
     image: quay.io/pypa/manylinux2010_x86_64
     requires: [~pr, ~commit]
-    # Steps definition block.
     steps:
       - begin: echo begin
       - update: |
@@ -12,9 +11,9 @@ jobs:
       - install_python: |
           if [ -e /usr/bin/apt-get ]; then
               apt-get install -y python3 python3-dev python3-venv python3-pip
+          else
+            export PATH=/opt/python/cp37-cp37m/bin:/opt/python/cp36-cp36m/bin:$PATH
           fi
-      - setup_path: export PATH=/opt/python/cp37-cp37m/bin:/opt/python/cp36-cp36m/bin:$PATH
-      - install_python: apt-get install -y python3 python3-dev python3-venv python3-pip
       - install_tox: python3 -m pip install tox
       - run_tox: |
           cd package
