--- a/screwdriver.yaml
+++ b/screwdriver.yaml
@@ -12,7 +12,8 @@ jobs:
           if [ -e /usr/bin/apt-get ]; then
               apt-get install -y python3 python3-dev python3-venv python3-pip
           else
-            export PATH=/opt/python/cp37-cp37m/bin:/opt/python/cp36-cp36m/bin:$PATH
+            
+            export PATH=/opt/python/cp37-cp37m/bin:/opt/python/cp36-cp36m/bin:/opt/python/cp27-cp27m/bin:$PATH
           fi
       - install_tox: python3 -m pip install tox
       - run_tox: |
