--- a/screwdriver.yaml
+++ b/screwdriver.yaml
@@ -1,25 +1,8 @@
 jobs:
   validate_test:
-    image: quay.io/pypa/manylinux2010_x86_64
-    requires: [~pr, ~commit]
+    template: python/validate_unittest
     steps:
-      - begin: echo begin
-      - update: |
-          if [ -e /usr/bin/apt-get ]; then
-              apt-get -y update
-          fi
-      - install_python: |
-          if [ -e /usr/bin/apt-get ]; then
-              apt-get install -y python3 python3-dev python3-venv python3-pip
-          else
-            
-            export PATH=/opt/python/cp37-cp37m/bin:/opt/python/cp36-cp36m/bin:/opt/python/cp27-cp27m/bin:$PATH
-          fi
-      - install_tox: python3 -m pip install tox
-      - run_tox: |
+      - validate_code: |
           cd package
           tox
           cd ..
-      - end: echo end
-      # - set-metadata: meta set example.coverage 99.95
- 
