--- a/screwdriver.yaml
+++ b/screwdriver.yaml
@@ -1,10 +1,10 @@
 version: 4
+shared:
+  steps:
+      - prevalidate_code: cd package
+      - postvalidate_code: cd $SD_SOURCE_DIR
+
 jobs:
   validate_test:
     template: python/validate_unittest
-    steps:
-      - validate_code: |
-          cd package
-          tox
-          cd ..
     requires: [~commit, ~pr]
