--- a/package/setup.cfg
+++ b/package/setup.cfg
@@ -2,7 +2,7 @@
 author = Screwdriver.cd team
 description-file = ../README.md
 name = screwdriver_cd_setup
-url = https://git.ouroath.com/dhubbard/in-a-box
+url = https://git.ouroath.com/screwdriver-cd/in-a-box?
 version = 0.0.0
 
 [options]
